<resources>
    <string name="app_name">Conversor de Moedas</string>
    <string name="qual_o_valor_em_euros">Qual é o valor em Euros?</string>
    <string name="valor_em_dollar">Valor em Dólares</string>
    <string name="valor_em_real">Valor em Reais</string>
    <string name="converter">Converter</string>
    <string name="valor">Valor €</string>
    <string name="informe_valor">Por favor insira um valor!</string>
</resources>