<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_valor_euros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:text="@string/qual_o_valor_em_euros"
        android:textColor="@color/colorAccent"
        android:textSize="33sp" />

    <EditText
        android:id="@+id/edit_valor"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:hint="@string/valor"
        android:inputType="number"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/text_valor_dollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/valor_em_dollar"
        android:textSize="24sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/text_dollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/valor_em_dollar"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_valor_real"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/valor_em_real"
        android:textSize="24sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/text_real"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/valor_em_real"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_converter"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:fontFamily="monospace"
        android:text="@string/converter"
        android:background="@color/colorAccent"
        android:textSize="21sp"
        android:ellipsize="end"
        android:textStyle="bold" />

</LinearLayout>